# flipt_android_test

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/fachry/flipttestkotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/fachry/flipttestkotlin/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/fachry/flipttestkotlin/: ExampleUnitTest.kt
flipt-client-kotlin-mobile/: build.gradle
flipt-client-kotlin-mobile/src/androidTest/java/io/flipt/client/: TestFliptEvaluationClient.kt
flipt-client-kotlin-mobile/src/main/cpp/: CMakeLists.txt
flipt-client-kotlin-mobile/src/main/java/io/flipt/client/: FliptEvaluationClient.kt
flipt-client-kotlin-mobile/src/main/java/io/flipt/client/models/: ClientOptions.kt  ErrorEvaluationResponse.kt  Flag.kt  VariantEvaluationResponse.kt
flipt-client-kotlin-mobile/src/test/java/io/flipt/client/: TestFliptEvaluationClient.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
